--- a/client/angular.json
+++ b/client/angular.json
@@ -20,9 +20,11 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/styles.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles.css",
+              "bootswatch/dist/flatly/bootstrap.min.css"
             ],
             "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
           },
