--- a/client/angular.json
+++ b/client/angular.json
@@ -24,8 +24,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/ngx-toastr/toastr.css",
-              "src/styles.css",
-              "bootswatch/dist/flatly/bootstrap.min.css"
+              "node_modules/ngx-spinner/animations/ball-spin-fade.css",
+              "bootswatch/dist/flatly/bootstrap.min.css",
+              "src/styles.css"
             ],
             "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
           },
